chore: use full git path in breaking command

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,4 +20,4 @@ jobs:
       - name: run buf lint
         run: buf lint
       - name: run buf breaking
-        run: buf breaking --against '.git#branch=master'
+        run: buf breaking --against 'https://github.com/dictyBase/dictybaseapis.git#branch=master'
