--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,10 @@ jobs:
     steps:
       - name: check out code
         uses: actions/checkout@v2
+      - name: set up golang
+        uses: actions/setup-go@v2
+        with:
+            go-version: "^1.16.3"
       - name: install necessary binaries
         run: make install
       - name: lint
