--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,14 +9,18 @@ jobs:
     steps:
       - name: check out code
         uses: actions/checkout@v2
-      - name: set up golang
-        uses: actions/setup-go@v2
-        with:
-            go-version: "^1.16.3"
-      - name: install necessary binaries
-        run: make install
-      - name: lint
-        run: make lint
+      - name: download and setup path for buf binary
+        run: |
+          mkdir -p buf/bin
+          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.42.1/buf-Linux-x86_64
+          chmod +x buf/bin/buf
+          echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
+      - name: run buf build
+        run: buf build
+      - name: run buf lint
+        run: buf lint
+      # - name: run buf breaking
+      #   run: buf breaking --against 'https://github.com/dictyBase/dictybaseapis.git#branch=master'
   generate:
     name: Generate Go code
     runs-on: ubuntu-20.04
@@ -28,7 +32,17 @@ jobs:
         uses: actions/setup-go@v2
         with:
             go-version: "^1.16.3"
-      - name: install necessary binaries
-        run: make install
+      - name: download and setup path for buf binary
+        run: |
+          mkdir -p buf/bin
+          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.42.1/buf-Linux-x86_64
+          chmod +x buf/bin/buf
+          echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
+      - name: download go binaries
+        run: |
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26.0
+        	go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
+        	go install github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway@v1.16.0
+	        go install github.com/mwitkow/go-proto-validators/protoc-gen-govalidators@v0.3.2
       - name: generate go code
-        run: make generate
+        run: buf generate --path dictybase
