--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -63,7 +63,22 @@ jobs:
           echo ::set-output name=id::${sha}
       - name: create new branch in cloned repo
         run: git checkout -b chore/update-${{ steps.vars.outputs.id }}
+      - name: extract user information 
+        id: user_info
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+              const { data } = await github.users.getByUsername({
+                username: context.payload.sender.login
+              })
+              core.setOutput("name", data.name)
+              core.setOutput("email", data.email)
       - name: commit changes
-        run: git add . && git commit -m "update from https://github.com/$GITHUB_REPOSITORY/commit/${{ steps.vars.outputs.id }}"
+        run: |
+            git config --global user.email ${{ steps.user_info.outputs.email }}
+            git config --global user.name ${{ steps.user_info.outputs.name }}
+            git add .
+            git commit -m "update from https://github.com/$GITHUB_REPOSITORY/commit/${{ steps.vars.outputs.id }}"
       - name: push changes
-        run: git push -u origin chore/update-${{ steps.vars.outputs.id }}
+        run: git push origin chore/update-${{ steps.vars.outputs.id }}
