--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -79,6 +79,6 @@ jobs:
             git config --global user.email ${{ steps.user_info.outputs.email }}
             git config --global user.name ${{ steps.user_info.outputs.name }}
             git add .
-            git commit -m "update from https://github.com/$GITHUB_REPOSITORY/commit/${{ steps.vars.outputs.id }}"
+            git commit -a -m "new update"
       - name: push changes
         run: git push origin chore/update-${{ steps.vars.outputs.id }}
