--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -67,4 +67,4 @@ jobs:
             git add .
             git commit -m "update from https://github.com/$GITHUB_REPOSITORY/commit/${{ steps.vars.outputs.id }}"
       - name: push changes
-        run: git push https://github.com/dictyBase/go-genproto.git chore/update-${{ steps.vars.outputs.id }}
+        run: git push https://${{ secrets.REPO_ACCESS_TOKEN }}@github.com/dictyBase/go-genproto.git chore/update-${{ steps.vars.outputs.id }}
