--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -53,7 +53,7 @@ jobs:
           go install github.com/mwitkow/go-proto-validators/protoc-gen-govalidators@v0.3.2
       - name: generate go code
         run: buf generate --path dictybase
-      - name: clone go-genproto
+      - name: checkout target repo
         if: success()
         uses: actions/checkout@v2
         env:
@@ -65,7 +65,7 @@ jobs:
           repository: ${{ env.REPO }}
           path: ${{ env.REPO_PATH }}
       - name: move generated files
-        run: rsync -r proto/ go-genproto/dictybaseapis --remove-source-files && rm -rf proto
+        run: cp -R proto/ go-genproto/dictybaseapis
       - name: move into updated repo
         run: cd ${{ env.REPO_PATH }}
       - name: get short sha
