--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,12 +15,19 @@ jobs:
           curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.42.1/buf-Linux-x86_64
           chmod +x buf/bin/buf
           echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
+      - name: install protoc
+        uses: arduino/setup-protoc@v1.1.2
+        with:
+          version: 3.17.1
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: run buf build
         run: buf build
       - name: run buf lint
         run: buf lint
       # - name: run buf breaking
       #   run: buf breaking --against 'https://github.com/dictyBase/dictybaseapis.git#branch=master'
+      - name: run protoc command
+        run: protoc -I . $(find ./dictybase -name '*.proto') -o /dev/stdout | buf lint -
   generate:
     name: Generate Go code
     runs-on: ubuntu-20.04
