--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,10 +9,14 @@ jobs:
     steps:
       - name: check out code
         uses: actions/checkout@v2
+      - name: set up golang
+        uses: actions/setup-go@v2
+        with:
+            go-version: "^1.16.3"
       - name: download and setup path for buf binary
         run: |
           mkdir -p buf/bin
-          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.42.1/buf-Linux-x86_64
+          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.43.2/buf-Linux-x86_64
           chmod +x buf/bin/buf
           echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
       - name: install protoc
@@ -20,14 +24,14 @@ jobs:
         with:
           version: 3.17.1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: run buf build
-        run: buf build
-      - name: run buf lint
-        run: buf lint
+      - name: install buf plugins
+        run: |
+          go install github.com/bufbuild/buf/cmd/protoc-gen-buf-breaking
+          go install github.com/bufbuild/buf/cmd/protoc-gen-buf-lint
+      - name: run linter
+        run: protoc -I . $(find ./dictybase -name '*.proto') -o /dev/stdout --buf-lint_out=.
       # - name: run buf breaking
       #   run: buf breaking --against 'https://github.com/dictyBase/dictybaseapis.git#branch=master'
-      - name: run protoc command
-        run: protoc -I . $(find ./dictybase -name '*.proto') -o /dev/stdout | buf lint -
   generate:
     name: Generate Go code
     runs-on: ubuntu-20.04
@@ -49,7 +53,7 @@ jobs:
       - name: download and setup path for buf binary
         run: |
           mkdir -p buf/bin
-          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.42.1/buf-Linux-x86_64
+          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.43.2/buf-Linux-x86_64
           chmod +x buf/bin/buf
           echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
       - name: download go binaries
