--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -83,7 +83,7 @@ jobs:
       - name: push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          github_token: ${{ secrets.ACCESS_TOKEN }}
           branch: chore/update-${{ steps.vars.outputs.id }}
           directory: ./target
           repository: dictybase/go-genproto
