--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,17 +19,8 @@ jobs:
           curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.43.2/buf-Linux-x86_64
           chmod +x buf/bin/buf
           echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
-      - name: install protoc
-        uses: arduino/setup-protoc@v1.1.2
-        with:
-          version: 3.17.1
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: install buf plugins
-        run: |
-          go install github.com/bufbuild/buf/cmd/protoc-gen-buf-breaking@v0.43.2
-          go install github.com/bufbuild/buf/cmd/protoc-gen-buf-lint@v0.43.2
       - name: run linter
-        run: protoc -I . $(find ./dictybase -name '*.proto') -o /dev/stdout --buf-lint_out=.
+        run: buf lint
       # - name: run buf breaking
       #   run: buf breaking --against 'https://github.com/dictyBase/dictybaseapis.git#branch=master'
   generate:
