--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -15,5 +15,5 @@ jobs:
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          destination_branch: develop
+          destination_branch: master
           pr_title: Pulling ${{ steps.vars.outputs.branch }} into develop
