--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -58,7 +58,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
           repository: dictybase/go-genproto
           path: target
       - name: add git config
