--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -12,11 +12,11 @@ jobs:
       - name: set up golang
         uses: actions/setup-go@v2
         with:
-            go-version: "^1.16.3"
+            go-version: "^1.17.x"
       - name: download and setup path for buf binary
         run: |
           mkdir -p buf/bin
-          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.43.2/buf-Linux-x86_64
+          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.56.0/buf-Linux-x86_64
           chmod +x buf/bin/buf
           echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
       - name: run linter
@@ -39,11 +39,11 @@ jobs:
       - name: set up golang
         uses: actions/setup-go@v2
         with:
-            go-version: "^1.16.3"
+            go-version: "^1.17.x"
       - name: download and setup path for buf binary
         run: |
           mkdir -p buf/bin
-          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.43.2/buf-Linux-x86_64
+          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.56.0/buf-Linux-x86_64
           chmod +x buf/bin/buf
           echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
       - name: download go binaries
