--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,7 +1,7 @@
 # The version of the generation template.
 # Required.
 # The only currently-valid value is v1beta1.
-version: v1beta1
+version: v1
 # The plugins to run.
 plugins:
   - name: go
