chore(create-pull-request.yml): update actions/checkout version to v3 and change destination branch to develop
The actions/checkout version has been updated to v3 to ensure the latest
features and improvements are used. Additionally, the destination branch
for the pull request has been changed from master to develop to align
with the project's branch naming convention.

--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-20.04
     if: github.actor != 'dependabot[bot]'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: get branch name
         id: vars
         run: |
@@ -15,5 +15,5 @@ jobs:
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          destination_branch: master
+          destination_branch: develop
           pr_title: Pulling ${{ steps.vars.outputs.branch }} into develop
