--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -1,28 +1,17 @@
 name: Buf
 on:
   pull_request:
-    types: [edited, labeled, opened, synchronize, reopened]
 jobs:
   lint:
     name: Linter
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: check out code
-        uses: actions/checkout@v2
-      - name: set up golang
-        uses: actions/setup-go@v2
-        with:
-            go-version: "^1.17.x"
-      - name: download and setup path for buf binary
-        run: |
-          mkdir -p buf/bin
-          curl -L -o buf/bin/buf https://github.com/bufbuild/buf/releases/download/v0.56.0/buf-Linux-x86_64
-          chmod +x buf/bin/buf
-          echo "$GITHUB_WORKSPACE/buf/bin" >> $GITHUB_PATH
+        uses: actions/checkout@v4
+      - name: setup buf
+        uses: bufbuild/buf-setup-action@v1
       - name: run linter
-        run: buf lint
-      # - name: run buf breaking
-      #   run: buf breaking --against 'https://github.com/dictyBase/dictybaseapis.git#branch=master'
+        uses: bufbuild/buf-lint-action@v1
   generate:
     name: Generate Go code
     runs-on: ubuntu-20.04
