--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -13,5 +13,5 @@ jobs:
           # Get current branch name
           branch_name=$(git symbolic-ref --short HEAD)
           # Create pull request using GitHub CLI
-          gh pr create --base develop --title "Auto-generated Pull Request for $branch_name" --body "Pulling '$branch_name into develop. Please review and merge."
+          gh pr create --base master --title "Auto-generated Pull Request for $branch_name" --body "Pulling '$branch_name into master. Please review and merge."
   
