chore(buf.gen.yaml): update go and go-grpc plugin versions, remove govalidators plugin
The go plugin version has been updated to v1.31.0 and the go-grpc plugin
version has been updated to v1.3.0. The govalidators plugin has been
removed from the list of plugins. These changes ensure that the
generated code is up to date and compatible with the latest versions of
the go and go-grpc plugins.

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,12 +1,10 @@
 # The version of the generation template.
-# Required.
-# The only currently-valid value is v1beta1.
 version: v1
 # The plugins to run.
 plugins:
-  - name: go
+  - plugin: buf.build/protocolbuffers/go:v1.31.0
     out: generated
-  - name: go-grpc
+  - plugin: buf.build/grpc/go:v1.3.0
     out: generated
-  - name: govalidators
+  - plugin: govalidators
     out: generated
