chore(buf.yaml): update dependency path for buf.build/googleapis/googleapis
The dependency path for buf.build/beta/googleapis has been updated to
buf.build/googleapis/googleapis. This change ensures that the correct
version of the dependency is used.

--- a/buf.yaml
+++ b/buf.yaml
@@ -1,7 +1,7 @@
 version: v1
 name: buf.build/dictybase/dictybaseapis
 deps:
-  - buf.build/beta/googleapis
+  - buf.build/googleapis/googleapis
 lint:
   use:
     - BASIC
