--- a/buf.yaml
+++ b/buf.yaml
@@ -2,6 +2,7 @@ version: v1
 name: buf.build/dictybase/dictybaseapis
 deps:
   - buf.build/googleapis/googleapis
+  - buf.build/bufbuild/protovalidate
 lint:
   use:
     - BASIC
