--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -8,3 +8,5 @@ plugins:
     out: generated
   - plugin: govalidators
     out: generated
+  - plugin: buf.build/community/pseudomuto-doc:v1.5.1
+    out: docs
