--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -8,5 +8,5 @@ plugins:
     out: generated
   - plugin: govalidators
     out: generated
-  - plugin: buf.build/community/pseudomuto-doc:v1.5.1
+  - plugin: buf.build/community/pseudomuto-doc
     out: docs
