--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -11,22 +11,11 @@ jobs:
       - name: check out code
         uses: actions/checkout@v4
       - name: setup buf
-        uses: bufbuild/buf-setup-action@v1
+        uses: bufbuild/buf-action@v1
       - name: configure git
         run: |
             git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
             git config --global user.name "$GITHUB_ACTOR"
-      - name: set up golang
-        uses: actions/setup-go@v4
-        with:
-            go-version: "1.20"
-      - name: download go binaries
-        run: |
-          go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.26.0
-          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.1.0
-          go install github.com/mwitkow/go-proto-validators/protoc-gen-govalidators@v0.3.2
-      - name: generate go code
-        run: buf generate --path dictybase
       - name: checkout target repo
         if: success()
         uses: actions/checkout@v4
