--- a/.github/workflows/buf-checkup.yml
+++ b/.github/workflows/buf-checkup.yml
@@ -1,5 +1,8 @@
 name: Buf checkup
 on: pull_request
+permissions:
+  contents: read
+  pull-requests: write
 jobs:
   lint:
     name: Linter
@@ -7,7 +10,5 @@ jobs:
     steps:
       - name: check out code
         uses: actions/checkout@v4
-      - name: setup buf
-        uses: bufbuild/buf-setup-action@v1
-      - name: run linter
-        uses: bufbuild/buf-lint-action@v1
+      - name: run buf
+        uses: bufbuild/buf-action@v1
