fix(buf-checkup.yml): disable breaking change checks
The buf checkup workflow is updated to not fail when a breaking change is detected, allowing for more flexible validation of buffer updates.

--- a/.github/workflows/buf-checkup.yml
+++ b/.github/workflows/buf-checkup.yml
@@ -12,3 +12,5 @@ jobs:
         uses: actions/checkout@v4
       - name: run buf
         uses: bufbuild/buf-action@v1
+        with: 
+          breaking: false
