fix(ci): add path filters to buf workflows
The workflows now only trigger when changes are made to specific files, reducing unnecessary runs and improving performance.

--- a/.github/workflows/buf-checkup.yml
+++ b/.github/workflows/buf-checkup.yml
@@ -1,5 +1,10 @@
 name: Buf checkup
-on: pull_request
+on: 
+  pull_request:
+    paths:
+      - 'dictybase/**/*.proto'
+      - 'buf.gen.yaml'
+      - 'buf.yaml'
 permissions:
   contents: read
   pull-requests: write
