--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'dictybase/**/*.proto'
+      - 'buf.gen.yaml'
+      - 'buf.yaml'
 jobs:
   generate:
     name: generate
