--- a/.github/workflows/buf-checkup.yml
+++ b/.github/workflows/buf-checkup.yml
@@ -17,3 +17,5 @@ jobs:
         uses: actions/checkout@v4
       - name: run buf
         uses: bufbuild/buf-action@v1
+        with: 
+          version: 1.47.2
