--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v4
       - name: setup buf
         uses: bufbuild/buf-action@v1
+        with: 
+          version: 1.47.2
       - name: generate code
         run: buf generate
       - name: configure git
