fix(buf-generate.yml): add permissions and concurrency to workflow
The workflow now has specified permissions for accessing repository contents, pages, and id-token, and also has concurrency control to manage concurrent executions of the workflow.

--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -7,6 +7,14 @@ on:
       - 'dictybase/**/*.proto'
       - 'buf.gen.yaml'
       - 'buf.yaml'
+permissions: 
+  contents: read
+  pages: write
+  id-token: write
+concurrency: 
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   generate:
     name: generate
