feat(ci): add github pages deployment to buf-generate workflow
The workflow now deploys generated documentation to GitHub Pages, making
it publicly accessible and improving discoverability of the project's
documentation.

--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -17,6 +17,9 @@ concurrency:
 
 jobs:
   generate:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     name: generate
     runs-on: ubuntu-latest
     steps:
@@ -63,3 +66,13 @@ jobs:
           branch: chore/update-${{ steps.vars.outputs.id }}
           directory: ./target
           repository: dictybase/go-genproto
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: docs/index.html
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
