fix(buf-generate.yml): add setup_only flag to buf-action
The setup_only flag is added to buf-action to prevent unnecessary reinitialization and improve workflow efficiency.

--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -29,6 +29,7 @@ jobs:
         uses: bufbuild/buf-action@v1
         with: 
           version: 1.47.2
+          setup_only: true
       - name: generate code
         run: buf generate
       - name: configure git
