--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -7,6 +7,7 @@ on:
       - 'dictybase/**/*.proto'
       - 'buf.gen.yaml'
       - 'buf.yaml'
+      - '.github/workflows/*.yml'
 permissions: 
   contents: read
   pages: write
