feat(ci): add golang setup and install go-proto-validators
The golang environment is now set up with a specific version and the
go-proto-validators binary is installed to support generation of
validation code for protobuf definitions.

--- a/.github/workflows/buf-generate.yml
+++ b/.github/workflows/buf-generate.yml
@@ -31,6 +31,13 @@ jobs:
         with: 
           version: 1.47.2
           setup_only: true
+      - name: set up golang
+        uses: actions/setup-go@v4
+        with:
+            go-version: 1.23
+      - name: download go binaries
+        run: |
+          go install github.com/mwitkow/go-proto-validators/protoc-gen-govalidators@v0.3.2
       - name: generate code
         run: |
             buf generate
